--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@heroicons/react": "^2.2.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "dotenv": "^17.2.3",
+    "process": "^0.11.10",
+    "@fastify/cors": "^11.1.0",
+    "fastify": "^5.6.1",
+    "axios": "^1.12.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "csv-parser": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
