--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -5,28 +5,21 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "@google/generative-ai": "^0.21.0",
-    "@supabase/supabase-js": "^2.76.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@google/genai": "^1.27.0",
     "axios": "^1.7.2",
-    "bcryptjs": "^3.0.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
-    "ioredis": "^5.8.2",
-    "jsonwebtoken": "^9.0.2"
+    "fastify": "^4.28.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   }
 }
